--- a/School_Bus/Views/Class/ClassView.xaml
+++ b/School_Bus/Views/Class/ClassView.xaml
@@ -38,11 +38,12 @@
                          BorderBrush="Orange"
                          BorderThickness="0,0,0,1"                             
                          VerticalContentAlignment="Center"
-                         Margin="5,5,0,0"></TextBox>
+                         Margin="5,5,0,0"
+                    Text="{Binding Id}"></TextBox>
             </StackPanel>
             <Button Grid.Column="1"
                 Content="Search"
-                Command="{Binding LoginCommand}"
+                Command="{Binding SearchCommand}"
                 Style="{StaticResource parentButton}">
             </Button>
             <Button Name="btn_AddClass"
